# charlie

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/base_local_planner/: Position2DInt.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
maps/: atelier_2.yaml  atelier_3.yaml  casaLuca.yaml  casaPark.yaml  casaPark2.yaml  casaViv.yaml  casaViv3.yaml  cotoletta.yaml  lab.yaml  panzanella.yaml
src/SerialManager/: CMakeLists.txt
src/charlie_pkg/: CMakeLists.txt  package.xml
src/lidar_cam_mapping/: CMakeLists.txt  rviz.rviz
src/pozyx_ros/: CMakeLists.txt
src/robot_navigation_v1/: CMakeLists.txt  README.md  package.xml
src/robot_navigation_v1/launch/: move_base.launch  robot_amcl_test.launch  robot_gazebo.launch  robot_navigation.launch  robot_remote.launch  uwb_init.launch
src/robot_navigation_v1/launch/includes/: description.launch.xml  mybot_description.launch.xml
src/robot_navigation_v1/maps/: casaViv2.yaml
src/robot_navigation_v1/param/: base_local_planner_params.yaml  costmap_common_params_robot.yaml  dwa_local_planner_params_robot.yaml
src/robot_navigation_v1/scripts/: frames.gv  move_base_simple.py  position_euler_pub_24_8.py  position_euler_pub_PROVE_DOWON.py  position_euler_pub_WORKING.py
src/robot_navigation_v1/urdf/custom_robot/: MYBOTLASER.gazebo  MYBOTLASER.xacro  mybot.gazebo  mybot.xacro  mybotBLU.gazebo  mybot_BLU.xacro
(+323 files in other folders)
